--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,6 +1,95 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block extra_title %} Home {% endblock %}
+
 {% block content %}
-<h1 class="display-4 text-success">It works!</h1>
+     <div class="container">
+         <div class="row">
+             <div class="col">
+                 <!---carousel-->
+                 <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="..." class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="..." class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="..." class="d-block w-100" alt="...">
+                      </div>
+                    </div>
+                  </div>
+             </div>
+         </div>
+         <!--heading-->
+         <div class="row">
+             <div class="col-s12">
+                 <h1 class="text-center">Discover Malta</h1>
+                 <p class="text-center">Malta is an archipelago in the central Mediterranean between Sicily and
+                     the North African coast. It's a nation known for historic sites related to a
+                     succession of rulers including the Romans, Moors, Knights of Saint John,
+                     French and British. It has numerous fortresses, megalithic temples and the Ħal Saflieni
+                     Hypogeum, a subterranean complex of halls and burial chambers dating to circa 4000 B.C.
+                 </p>
+             </div>
+         </div>
+         <!--Testimony-->
+         <div class="row">
+             <div class="col">
+                 <h2 class="text-center">Plan your dream vacation in one place</h2>
+                 <p class="text-center">
+                    We want to make sure you have the best, hustle free time in Malta! Here you can book all your
+                    antennary on one platform and ensure you do not miss out on anything you want to do when you arrive: 
+                 </p>
+                 <ul class="text-center">
+                     <li>Sing in and view your holiday planner</li>
+                     <li>Instant confirmation </li>
+                     <li>Mobile Tickets</li>
+                     <li>Cancellation Policy</li>
+                     <li>Fast and Secure online payments</li>
+                 </ul>
+                 <p class="text-center">
+                    So what are you waiting for?
+                    <strong> Explore our amazing offers and plan your dream vacation!</strong>
+                 </p>
+             </div>
+         </div>
+         <!--Category Display-->
+         <div class="row">
+             <div class="col">
+                 <h3 class="text-center">Choose Your Category</h3>
+             </div>
+         </div>
+         <!--Display of Categories name and image with a link to category pages-->
+         <div class="row">
+             <div class="col-lg-3 col-md-4 col-sm-6">
+                <div class="card bg-dark text-white">
+                    <img src="..." class="card-img" alt="...">
+                    <div class="card-img-overlay">
+                      <h5 class="card-title text-center">Card title</h5>
+                    </div>
+                  </div>
+             </div>
+         </div>
+         <div class="row">
+             <!--link to all trips page-->
+             <div class="col justify-content-center">
+                 <a href="" class="btn btn-lg">View All Trips</a>
+             </div>
+         </div>
+     </div>
+{% endblock %}
+
+{% block postloadjs %}
+<script>
+    // Bootstrap code to initialize carousel
+    var myCarousel = document.querySelector('#myCarousel')
+    var carousel = new bootstrap.Carousel(myCarousel, {
+        interval: 2000,
+        wrap: false
+    });
+</script>
+
 {% endblock %}
