--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -11,13 +11,13 @@
                  <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="..." class="d-block w-100" alt="...">
+                        <img src="media/catamaran.jpg" class="d-block w-100" alt="catamaran sailing in the sea">
                       </div>
                       <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
+                        <img src="media/gozo.jpg" class="d-block w-100" alt="gozo island">
                       </div>
                       <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
+                        <img src="media/marsaxlokk.jpg" class="d-block w-100" alt="marsaxlokk village in Malta">
                       </div>
                     </div>
                   </div>
