--- a/templates/base.html
+++ b/templates/base.html
@@ -14,12 +14,18 @@
 
     {% block corecss %}
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Acme&family=Oxygen:wght@300&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% endblock %}
 
     {% block extra_css %}
     {% endblock %}
 
     {% block corejs %}
+        <script src="https://kit.fontawesome.com/fa9ed30322.js" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
     {% endblock %}
 
@@ -56,35 +62,24 @@
               <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
                   <ul class="list-inline list-unstyled text-center text-lg-right my-0">
                       <li class="list-inline-item dropdown">
-                          <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown"
-                              aria-haspopup="true" aria-expanded="false">
-                              <div class="text-center">
-                                  <div><i class="fas fa-user fa-lg"></i></div>
-                                  <p class="my-0">My Account</p>
-                              </div>
-                          </a>
-                          <div class="dropdown-menu border-0" aria-labelledby="user-options">
-                              <!--If user is authenticated-->
-                              {% if request.user.is_authenticated %}
-                              <!--If user is admin-->
-                              {% if request.user.is_superuser %}
-                              <a href="" class="dropdown-item">Product Management</a>
-                              {% endif %}
-                              <a href="" class="dropdown-item">My Profile</a>
-                              <a href="" class="dropdown-item">Logout</a>
-                              {% else %}
-                              <!--For not logged in user-->
-                              <a href="" class="dropdown-item">Register</a>
-                              <a href="" class="dropdown-item">Login</a>
-                              {% endif %}
+                          <div class="btn-group">
+                            <div><i class="fas fa-user fa-lg"></i></div>
+                            <p class="my0 dropdown-toggle" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                              My Account
+                            </p>
+                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                              <li><a class="dropdown-item" href="#">Log In</a></li>
+                              <li><a class="dropdown-item" href="#">Register</a></li>
+                              <li><a class="dropdown-item" href="#">Logout</a></li>
+                            </ul>
                           </div>
                       </li>
                       <!--Shopping bag link-->
                       <li class="list-inline-item">
-                          <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
+                          <a class="nav-link"
                               href="">
                               <div class="text-center">
-                                  <div><i class="fas fa-shopping-bag fa-lg"></i></div>
+                                  <div><i class="fas fa-suitcase-rolling fa-lg"></i></div>
                                   <p class="my-0">
                                       <!--If there is grand total should display and convert to 2 decimal in the bag item-->
                                      <!-- {% if grand_total %}
@@ -97,6 +92,18 @@
                               </div>
                           </a>
                       </li>
+                      <!--favourite link-->
+                      <li class="list-inline-item">
+                        <a class="nav-link"
+                            href="">
+                            <div class="text-center">
+                                <div><i class="fas fa-heart fa-lg"></i></div>
+                                <p class="my-0">
+                                 1
+                                </p>
+                            </div>
+                        </a>
+                    </li>
                   </ul>
               </div>
           </div>
