--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,10 +1,81 @@
 html {
-    height: 100%;
+    height: 100%; 
+    scroll-behavior: smooth;
 }
 
 body {
+    margin: 0;
+    padding: 0;
     font-family: 'Oxygen', sans-seri;
+    color: #000000;
+    background-color: #fafafa;
 }
+
+
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Acme', sans-serif;
+}
+
+
+/*************************Navigation*/
+
+nav, 
+.main-nav {
+    background-color: #000000;
+}
+
+header, 
+.dropdown-menu {
+    background-color: #000000;
+}
+
+.dropdown-item {
+    color: #fafafa;
+}
+
+.navbar-toggler {
+    background-color: #fafafa;
+}
+
+.fa-bars {
+    padding-top: 5px;
+}
+
+.nav-item a:hover,
+a:active,
+.main-logo-link:hover {
+    border-radius: 5%;
+    border: 3px solid #2576da;
+    transition: ease-in-out all .4s; 
+    -moz-transition: ease-in-out all .4s;
+    -webkit-transition: ease-in-out all .4s;
+    background-color: rgba(97, 95, 95, 0.6);
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.navbar-toggler:hover {
+    border-radius: 5%;
+    border: 3px solid #2576da;
+    transition: ease-in-out all .4s; 
+    -moz-transition: ease-in-out all .4s;
+    -webkit-transition: ease-in-out all .4s;
+}
+
+.dropdown-item:hover {
+    color: #fafafa;
+    font-weight: bold;
+}
+
+.fas:hover {
+    padding: 10px;
+}
+
+.brand-logo:hover {
+    color: #2576da;
+}
+
 
 /*font-family: 'Acme', sans-serif; - headings
 font-family: 'Oxygen', sans-seri  - paragraphs */
