--- a/templates/base.html
+++ b/templates/base.html
@@ -37,32 +37,17 @@
   <body>
       <header class="container-fluid fixed-top">
           <!--Logo-->
-          <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
+          <div id="topnav" class="row pt-lg-2 d-none d-lg-flex">
               <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
                   <a href="{% url 'home' %}" class="nav-link main-logo-link">
-                      <h2 class="logo-front text-black my-0"><strong>Discover</strong> Malta</h2>
+                      <h2 class="logo-front text-white my-0"><strong class='brand-logo'>Discover</strong> Malta</h2>
                   </a>
               </div>
-              <!--Search bar-->
-              <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-                  <form method="GET" action="">
-                      <div class="input-group w-100">
-                          <input class="form-control border border-black rounded-0" type="text" name="q"
-                              placeholder="Search our site">
-                          <div class="input-group-append">
-                              <button class="form-control btn btn-black border border-black rounded-0" type="submit">
-                                  <span class="icon">
-                                      <i class="fas fa-search"></i>
-                                  </span>
-                              </button>
-                          </div>
-                      </div>
-                  </form>
-              </div>
-              <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-                  <ul class="list-inline list-unstyled text-center text-lg-right my-0">
+              <!--Profile-->
+              <div class="col-12 col-lg-2 offset-lg-6 my-auto py-1 py-lg-0">
+                  <ul class="list-inline list-unstyled text-lg-right my-0">
                     <li class="nav-item dropdown list-inline-item">
-                        <a class="nav-link dropdown-toggle text-black" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             <div><i class="fas fa-user fa-lg"></i></div>
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -73,8 +58,8 @@
                         </ul>
                       </li>
                       <!--Shopping bag link-->
-                      <li class="list-inline-item">
-                          <a class="nav-link"
+                      <li class="list-inline-item nav-item">
+                          <a class="nav-link text-white"
                               href="">
                               <div class="text-center">
                                   <div><i class="fas fa-suitcase-rolling fa-lg"></i></div>
@@ -85,8 +70,8 @@
                           </a>
                       </li>
                       <!--favourite link-->
-                      <li class="list-inline-item">
-                        <a class="nav-link text-black"
+                      <li class="list-inline-item nav-item">
+                        <a class="nav-link text-white"
                             href="">
                             <div class="text-center">
                                 <div><i class="fas fa-heart fa-lg"></i></div>
@@ -100,12 +85,12 @@
               </div>
           </div>
           <!--main navbar-->
-          <div class="row">
+          <div class="row main-nav">
               <div class="col">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <nav class="navbar navbar-expand-lg">
                     <div class="container-fluid">
                       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
+                        <span class="navbar-toggler-icon"><i class="fas fa-bars fa-lg"></i></span>
                       </button>
                     {% include 'includes/mobile-nav.html' %}
                     {% include 'includes/main-nav.html' %}
