--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,15 +1,15 @@
 <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav w-auto mx-auto">
-      <li class="nav-item d-block d-md-none">
-        <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'home' %}" id="home-link">
+      <li class="nav-item d-block d-md-none text-white">
+        <a class="logo-font font-weight-bold nav-link text-white mr-5" href="{% url 'home' %}" id="home-link">
             Home
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">All Trips</a>
+        <a class="nav-link text-white" href="#">All Trips</a>
       </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+      <li class="nav-item dropdown ">
+        <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
           Categories
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -20,12 +20,7 @@
         </ul>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Last Minute Deals</a>
+        <a class="nav-link text-white" href="#">Last Minute Deals</a>
       </li>
     </ul>
-    <!--search form-->
-    <form class="d-flex">
-      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success" type="submit">Search</button>
-    </form>
   </div>
