--- a/templates/includes/mobile-nav.html
+++ b/templates/includes/mobile-nav.html
@@ -1,34 +1,7 @@
 <ul>
-    <!--search bar-->
-    <li class="list-inline-item">
-        <a class="text-black nav-link d-block d-lg-none" href="#" id="mobile-search" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
-            <div class="text-center">
-                <div><i class="fas fa-search fa-lg"></i></div>
-                <p class="my-0">Search</p>
-            </div>
-        </a>
-        <div class="dropdown-menu border-0 w-100 p-3 rounded-0 my-0" aria-labelledby="mobile-search">
-            <!--add url here for trips-->
-            <form class="form" method="GET" action="">
-                <div class="input-group w-100">
-                    <input class="form-control border border-black rounded-0" type="text" name="q"
-                        placeholder="Search our site">
-                    <div class="input-group-append">
-                        <button class="form-control form-control btn btn-black border border-black rounded-0"
-                            type="submit">
-                            <span class="icon">
-                                <i class="fas fa-search"></i>
-                            </span>
-                        </button>
-                    </div>
-                </div>
-            </form>
-        </div>
-    </li>
     <!--access to the account menu-->
-    <li class="nav-item dropdown list-inline-item">
-        <a class="nav-link dropdown-toggle text-black" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+    <li class="nav-item dropdown list-inline-item nav-item">
+        <a class="nav-link dropdown-toggle text-white d-block d-lg-none" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             <div class="text-center"><i class="fas fa-user fa-lg"></i>
             </div>
         </a>
@@ -40,8 +13,8 @@
         </ul>
     </li>
     <!--favourites-->
-    <li class="list-inline-item">
-        <a class="nav-link text-black"
+    <li class="list-inline-item nav-item">
+        <a class="nav-link text-white d-block d-lg-none"
             href="">
             <div class="text-center">
                 <div><i class="fas fa-heart fa-lg"></i></div>
@@ -52,24 +25,16 @@
         </a>
     </li>
     <!--access to the shopping bag-->
-    <li class="list-inline-item">
-        <a class="{% if grand_total %}text-primary font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none"
+    <li class="list-inline-item nav-item">
+        <a class="text-primary text-white font-weight-bold nav-link d-block d-lg-none"
             href="">
             <div class="text-center">
                 <div><i class="fas fa-suitcase-rolling fa-lg"></i></i></div>
                 <p class="my-0">
-                    {% if grand_total %}
-                    ${{ grand_total|floatformat:2 }}
-                    {% else %}
                     $0.00
-                    {% endif %}
                 </p>
             </div>
         </a>
     </li>
 </ul>
-<!--search form -->
-<form class="d-flex">
-    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-    <button class="btn btn-outline-success" type="submit">Search</button>
-  </form>
+
