Added trips view and templates

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -64,14 +64,16 @@
          </div>
          <!--Display of Categories name and image with a link to category pages-->
          <div class="row">
+             {% for category in categories %}
              <div class="col-lg-3 col-md-4 col-sm-6">
                 <div class="card bg-dark text-white">
-                    <img src="..." class="card-img" alt="...">
+                    <img src="{{ category.cat_img }}" class="card-img" alt="{{ category.category_name }}">
                     <div class="card-img-overlay">
-                      <h5 class="card-title text-center">Card title</h5>
+                      <h5 class="card-title text-center">{{ category.category_name }}</h5>
                     </div>
                   </div>
              </div>
+             {% endfor %}
          </div>
          <div class="row">
              <!--link to all trips page-->
