--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -63,13 +63,13 @@
              </div>
          </div>
          <!--Display of Categories name and image with a link to category pages-->
-         <div class="row">
+         <div class="row category-div">
              {% for category in categories %}
-             <div class="col-lg-3 col-md-4 col-sm-6">
-                <div class="card bg-dark text-white m-2 p-2">
+             <div class="col-lg-3 col-md-4 col-sm-6 p-2">
+                <div class="card bg-dark h-100 m-1">
                     <img src="{{ category.cat_image.url }}" class="card-img" alt="{{ category.category_name }}">
                     <div class="card-img-overlay">
-                      <h5 class="card-title text-center">{{ category.category_name | capfirst }}</h5>
+                      <h5 class="card-title text-center category-heading">{{ category.category_name | capfirst }}</h5>
                     </div>
                   </div>
              </div>
