--- a/static/css/base.css
+++ b/static/css/base.css
@@ -75,6 +75,33 @@ a:active,
     color: #2576da;
 }
 
+/***********************Index.html*/
+
+.category-div {
+    justify-content: center;
+}
+
+.category-heading {
+    color: #da8925;
+    font-weight: 700;
+    text-shadow: 2px 2px black;
+    cursor: pointer;
+    letter-spacing: 0.1rem;
+    font-size: 1.3rem;
+}
+
+.card:hover {
+    box-shadow: 5px 6px 6px 2px rgba(97, 95, 95, 0.6);
+    transform: scale(1.1)
+}
+
+.card {
+    border: 2px solid rgba(0,0,0,.125);
+    box-shadow: -3px 8px 27px -2px rgba(0,0,0,0.51);
+    -webkit-box-shadow: -3px 8px 27px -2px rgba(0,0,0,0.51);
+    -moz-box-shadow: -3px 8px 27px -2px rgba(0,0,0,0.51);
+}
+
 
 /*font-family: 'Acme', sans-serif; - headings
 font-family: 'Oxygen', sans-seri  - paragraphs */
@@ -159,7 +186,7 @@ footer {
 /* Slightly larger container on xl screens */
 @media (min-width: 1200px) {
     .container {
-      max-width: 80%;
+      max-width: 90%;
     }
   }
 
@@ -170,5 +197,12 @@ footer {
     
     ul {
         padding: 0px;
+    }
+
+}
+
+@media (max-width: 420px) {
+    .category-heading {
+        font-size: 2rem;
     }
 }
