--- a/static/css/base.css
+++ b/static/css/base.css
@@ -77,7 +77,43 @@ a:active,
 
 /***********************Index.html*/
 
-.category-div {
+.card-info {
+    border-radius: 50%;
+    color: white;
+    width: 10rem;
+    height: 10rem;
+    padding: 0.8rem;
+    margin: 2rem;
+    font-size: 20px;
+    font-family: 'Acme', sans-serif;
+    border: 2px solid rgba(0,0,0,.125);
+    box-shadow: -3px 8px 27px -2px rgba(0,0,0,0.51);
+}
+
+.card-1 {
+    background-color: #2576da;
+}
+
+.card-2 {
+    background-color: #039b2b;
+}
+
+.card-3 {
+    background-color: #fafafa;
+    color: #000000;
+}
+
+.card-4 {
+    background-color: #ef1018;
+}
+
+.card-5 {
+    background-color: #da8925;
+}
+
+
+.category-div,
+.testimony-div {
     justify-content: center;
 }
 
