Added animation to the info-divs using jQuery and style

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -46,33 +46,38 @@
         </div>
     </div>
     <!--Reasons for signing up-->
-    <div class="row testimony-div">
-        <div class="card-info card-1 col-lg-4 col-md-4 col-sm-6">
-            <div class="card-body text-center">
-                <p>Instant Email Confirmation</p>
-            </div>
-        </div>
-        <div class="card-info card-2 col-lg-4 col-md-4 col-sm-6">
-            <div class="card-body text-center">
-                <p>Mobile Tickets</p>
-            </div>
-        </div>
-        <div class="card-info card-3 col-lg-4 col-md-4 col-sm-6">
-            <div class="card-body text-center">
-                <p>Cancellation Policy</p>
-            </div>
-        </div>
-        <div class="card-info card-4 col-lg-4 col-md-4 col-sm-6">
-            <div class="card-body text-center">
-                <p>Fast ＆ Secure Online Payments</p>
-            </div>
-        </div>
-        <div class="card-info card-5 col-lg-4 col-md-4 col-sm-6">
-            <div class="card-body text-center">
-                <p>Rate ＆ Review Your Experience</p>
-            </div>
-        </div>
-    </div>
+    <div class="row testimony-div">	
+        <div class="card-info card-1 col-lg-2 col-md-4 col-sm-6">	
+            <div class="card-body text-center">	
+              <i class="fas fa-envelope-open-text"></i>	
+                <p>Instant Email Confirmation</p>	
+            </div>	
+        </div>	
+        <div class="card-info card-2 col-lg-2 col-md-4 col-sm-6">	
+            <div class="card-body text-center">	
+              <i class="fas fa-mobile-alt"></i>	
+                <p>Mobile Tickets</p>	
+            </div>	
+        </div>	
+        <div class="card-info card-3 col-lg-4 col-lg-2 col-md-4 col-sm-6">	
+            <div class="card-body text-center">	
+              <i class="fas fa-file-alt"></i>	
+                <p>Cancellation Policy</p>	
+            </div>	
+        </div>	
+        <div class="card-info card-4 col-lg-2 col-md-6 col-sm-6">	
+            <div class="card-body text-center">	
+              <i class="fab fa-cc-paypal"></i>	
+                <p>Fast ＆ Secure Online Payments</p>	
+            </div>	
+        </div>	
+        <div class="card-info card-5 col-lg-4 col-lg-2 col-md-6 col-sm-6 offset-sm-6">	
+            <div class="card-body text-center">	
+              <i class="fas fa-comment-dots"></i>	
+                <p>Rate ＆ Review Your Experience</p>	
+            </div>	
+        </div>	
+    </div>	
    <div class="row">
        <div class="col-12">
         <p class="text-center">
@@ -111,14 +116,9 @@
 </div>
 {% endblock %}
 
-{% block postloadjs %}
-<script>
-    // Bootstrap code to initialize carousel
-    var myCarousel = document.querySelector('#myCarousel')
-    var carousel = new bootstrap.Carousel(myCarousel, {
-        interval: 2000,
-        wrap: false
-    });
-</script>
 
+{% block postloadjs %}
+    {{ block.super }}  
+    <script src="{% static '/home/js/home-script.js' %}" type="text/javascript"></script>
 {% endblock %}
+
