--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,5 +1,5 @@
 html {
-    height: 100%; 
+    height: 100%;
     scroll-behavior: smooth;
 }
 
@@ -13,19 +13,24 @@ body {
 
 
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-family: 'Acme', sans-serif;
 }
 
 
 /*************************Navigation*/
 
-nav, 
+nav,
 .main-nav {
     background-color: #000000;
 }
 
-header, 
+header,
 .dropdown-menu {
     background-color: #000000;
 }
@@ -46,7 +51,7 @@ header,
 a:active,
 .main-logo-link:hover {
     border: 1px solid #2576da;
-    transition: ease-in-out all .4s; 
+    transition: ease-in-out all .4s;
     -moz-transition: ease-in-out all .4s;
     -webkit-transition: ease-in-out all .4s;
     background-color: rgba(97, 95, 95, 0.6);
@@ -57,7 +62,7 @@ a:active,
 .navbar-toggler:hover {
     border-radius: 5%;
     border: 3px solid #2576da;
-    transition: ease-in-out all .4s; 
+    transition: ease-in-out all .4s;
     -moz-transition: ease-in-out all .4s;
     -webkit-transition: ease-in-out all .4s;
 }
@@ -86,29 +91,51 @@ a:active,
     margin: 2rem;
     font-size: 20px;
     font-family: 'Acme', sans-serif;
-    border: 2px solid rgba(0,0,0,.125);
-    box-shadow: -3px 8px 27px -2px rgba(0,0,0,0.51);
+    border: 2px solid rgba(0, 0, 0, .125);
+    box-shadow: -3px 8px 27px -2px rgba(0, 0, 0, 0.51);
+    display: none;
+
+}
+
+.card-info::after {
+    content: '';
+    position: absolute;
+    top: -15px;
+    left: -15px;
+    right: -15px;
+    bottom: -15px;
+    border: white 2px solid;
+    border-radius: 50%;
+}
+
+.card-info p {
+    font-size: 1rem;
 }
 
 .card-1 {
     background-color: #2576da;
+   
 }
 
 .card-2 {
     background-color: #039b2b;
+ 
 }
 
 .card-3 {
     background-color: #fafafa;
     color: #000000;
+   
 }
 
 .card-4 {
     background-color: #ef1018;
+  
 }
 
 .card-5 {
     background-color: #da8925;
+  
 }
 
 
@@ -121,6 +148,8 @@ a:active,
     background-color: black;
     border: 2px dotted white;
     margin: 5px;
+    width: 100%;
+    height: 400px;
 }
 
 
@@ -139,11 +168,17 @@ a:active,
 }
 
 .card {
-    border: 2px solid rgba(0,0,0,.125);
-    box-shadow: -3px 8px 27px -2px rgba(0,0,0,0.51);
-    -webkit-box-shadow: -3px 8px 27px -2px rgba(0,0,0,0.51);
-    -moz-box-shadow: -3px 8px 27px -2px rgba(0,0,0,0.51);
+    border: 2px solid rgba(0, 0, 0, .125);
+    box-shadow: -3px 8px 27px -2px rgba(0, 0, 0, 0.51);
+    -webkit-box-shadow: -3px 8px 27px -2px rgba(0, 0, 0, 0.51);
+    -moz-box-shadow: -3px 8px 27px -2px rgba(0, 0, 0, 0.51);
 }
+
+
+
+
+
+
 
 
 /*font-family: 'Acme', sans-serif; - headings
@@ -184,22 +219,22 @@ footer {
 }
 
 .social-icons {
-  list-style-type: none;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  text-align: center;
-  width: 100%;
-  padding-bottom: 0.2rem;
+    list-style-type: none;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    width: 100%;
+    padding-bottom: 0.2rem;
 }
 
 .social-icons li {
     display: inline-block;
     position: relative;
     padding: 0rem 0.8rem;
-    color:  #fafafa;
+    color: #fafafa;
     font-size: 1.5rem;
-    box-shadow:  1.5rem .5rem .8rem rgba(0, 0, 0, 0.8);
+    box-shadow: 1.5rem .5rem .8rem rgba(0, 0, 0, 0.8);
 }
 
 .social-icons li a {
@@ -213,11 +248,11 @@ footer {
     background-color: rgba(97, 95, 95, 0.6);
     border-radius: 10%;
     padding: 1rem;
-    transition: ease-in-out all .4s; 
+    transition: ease-in-out all .4s;
     -moz-transition: ease-in-out all .4s;
     -webkit-transition: ease-in-out all .4s;
 }
-    
+
 .copy-rights-text {
     color: #fafafa;
     font-size: .8rem;
@@ -229,19 +264,18 @@ footer {
 /* Slightly larger container on xl screens */
 @media (min-width: 1200px) {
     .container {
-      max-width: 90%;
+        max-width: 90%;
     }
-  }
+}
 
 @media (min-width: 320px) {
     .nav-link {
         padding: 0px;
     }
-    
+
     ul {
         padding: 0px;
     }
-
 }
 
 @media (max-width: 420px) {
@@ -249,3 +283,4 @@ footer {
         font-size: 2rem;
     }
 }
+
