--- a/static/css/base.css
+++ b/static/css/base.css
@@ -88,11 +88,12 @@ a:active,
     width: 10rem;
     height: 10rem;
     padding: 0.8rem;
+    position: relative;
     margin: 2rem;
     font-size: 20px;
     font-family: 'Acme', sans-serif;
     border: 2px solid rgba(0, 0, 0, .125);
-    box-shadow: -3px 8px 27px -2px rgba(0, 0, 0, 0.51);
+    box-shadow: -3px 8px 27px -2px rgba(180, 179, 179, 0.51);
     display: none;
 
 }
@@ -119,23 +120,22 @@ a:active,
 
 .card-2 {
     background-color: #039b2b;
- 
+
 }
 
 .card-3 {
     background-color: #fafafa;
     color: #000000;
-   
+
 }
 
 .card-4 {
     background-color: #ef1018;
-  
+
 }
 
 .card-5 {
     background-color: #da8925;
-  
 }
 
 
@@ -149,7 +149,8 @@ a:active,
     border: 2px dotted white;
     margin: 5px;
     width: 100%;
-    height: 400px;
+    height: 230px;
+    box-shadow: -3px 8px 27px -2px rgba(0, 0, 0, 0.51);
 }
 
 
@@ -276,6 +277,21 @@ footer {
     ul {
         padding: 0px;
     }
+
+    .card-info {
+    height: 8rem;
+    width: 8rem;
+    margin: 1rem 0.1rem;
+    }
+
+    .card-info .card-body {
+        padding: 0px;
+    }
+
+    .testimony-div {
+        height: fit-content !important;
+    }
+
 }
 
 @media (max-width: 420px) {
@@ -284,3 +300,9 @@ footer {
     }
 }
 
+@media (max-width: 768px) {
+    .testimony-div {
+        height: 450px;
+    }
+    
+}
