Added style to the link on line 113

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -109,8 +109,8 @@
 </div>
 <div class="row">
     <!--link to all trips page-->
-    <div class="col justify-content-center">
-        <a href="" class="btn btn-lg">View All Trips</a>
+    <div class="col justify-content-center btn-div">
+        <a href="" class="btn btn-lg btn-next">View All Trips</a>
     </div>
 </div>
 </div>
