--- a/static/css/base.css
+++ b/static/css/base.css
@@ -9,6 +9,7 @@ body {
     font-family: 'Oxygen', sans-seri;
     color: #000000;
     background-color: #fafafa;
+    font-size: 1.2rem;
 }
 
 
@@ -175,6 +176,27 @@ a:active,
     -moz-box-shadow: -3px 8px 27px -2px rgba(0, 0, 0, 0.51);
 }
 
+.btn-div {
+    display: flex;
+}
+
+.btn-next {
+    background-color: #da8925;
+    border-radius: 0.5rem;
+    color:#fafafa;
+    margin: 0.5rem auto;
+    border: 0.2rem solid #000000;
+    font-family: 'Acme', sans-serif;
+}
+
+.btn-next:hover {
+    background-color: #2576da;
+    color: #fafafa ;
+    transition: ease-in-out all .4s;
+    -moz-transition: ease-in-out all .4s;
+    -webkit-transition: ease-in-out all .4s;
+    box-shadow: -3px 8px 27px -2px rgba(0, 0, 0, 0.51);
+}
 
 
 
