Added links to the all trips page

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -110,7 +110,7 @@
 <div class="row">
     <!--link to all trips page-->
     <div class="col justify-content-center btn-div">
-        <a href="" class="btn btn-lg btn-next">View All Trips</a>
+        <a href="{% url 'trips' %}" class="btn btn-lg btn-next">View All Trips</a>
     </div>
 </div>
 </div>
