--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,12 +1,12 @@
 <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav w-auto mx-auto">
-      <li class="nav-item d-block d-md-none text-white">
+      <li class="nav-item text-white">
         <a class="logo-font font-weight-bold nav-link text-white mr-5" href="{% url 'home' %}" id="home-link">
             Home
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-white" href="#">All Trips</a>
+        <a class="nav-link text-white" href="{% url 'trips' %}">All Trips</a>
       </li>
       <li class="nav-item dropdown ">
         <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
