--- a/trips/templates/trips/trips.html
+++ b/trips/templates/trips/trips.html
@@ -1,23 +1,18 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block extra_title %} Home {% endblock %}
+{% block extra_title %} Trips {% endblock %}
 
 {% block content %}
 <section>
     <div class="container">
-        <div class="row">
-            <div class="col">
-
-            </div>
-        </div>
         <!--heading-->
         <div class="row">
             <div class="col-s12 mt-1">
                 <h1 class="text-center heading">View All The Experiences</h1>
-                {{ trips }}
             </div>
         </div>
+        <!--Search Form-->
         <div class="row">
             <div class="col-lg-8 offset-lg-2 col-md-8 offset-md-2 col-sm-12">
                 <form method="GET" action="#">
@@ -46,9 +41,9 @@
             <div class="col-lg-6 offset-lg-3 col-md-6 offset-md-6 col-sm-6 offset-sm-6">
                 <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
                     <option selected>Choose Your Category</option>
-                    <option value="1">Water Activities</option>
-                    <option value="2">Food & Wine</option>
-                    <option value="3">Fishing</option>
+                    {% for category in categories %}
+                    <option value="1">{{ category.category_name | capfirst }}</option>
+                    {% endfor %}
                 </select>
             </div>
         </div>
@@ -58,28 +53,35 @@
 <section class="main-content">
     <div class="container">
         <div class="row">
-            <div class="col-lg-4 col-md-6 col-sm-12">
-                <div class="card" style="width: 18rem;">
+            {% for trip in trips %}
+            <div class="col-lg-3 col-md-6 col-sm-12">
+                <div class="card card-trip">
                     <button type="button" class="btn add-to-favourites" data-bs-toggle="tooltip" data-bs-placement="top" title="Add to favourites">
                         <i class="fas fa-heart"></i>
                       </button>
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="{{ trip.images.url }}" class="card-img-top" alt="{{ trip.name }}">
                     <div class="card-body">
-                      <h4 class="card-title">Trip Name</h4>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <h4 class="card-title">{{ trip.name }}</h4>
+                      <p class="card-text short-description">{{ trip.short_description }}</p>
+                      <hr>
                       <ul class="list-group">
-                          <li class="list-group-item"><i class="fas fa-hourglass-end"></i> 5 hrs</li>
-                          <li class="list-group-item"><i class="fas fa-euro-sign"></i> 30</li>
+                          <li class="list-group-item"><i class="fas fa-hourglass-end"></i>{{ trip.duration }}hrs</li>
+                          <li class="list-group-item"><i class="fas fa-euro-sign"></i>{{ trip.adult_price }}</li>
                           <li class="list-group-item"><i class="fas fa-star"></i> 5/5 </li>
+                          {% if trip.family_friendly %}
+                          <li class="list-group-item"><i class="fas fa-child"></i>Family</li>
+                          {% endif %}
                       </ul>
                       <a href="#" class="btn ml-3 btn-more"><i class="fas fa-plus"></i>More Info
                       </a>
                     </div>
                   </div>
             </div>
+            {% endfor %}
         </div>
     </div>
 </section>
+<!--Pagination-->
 <section class="pagination-section">
     <div class="container">
         <div class="row">
