--- a/trips/templates/trips/trip_detail.html
+++ b/trips/templates/trips/trip_detail.html
@@ -15,17 +15,26 @@
     </div>
     <div class="row">
         <div class="col">
+            <button type="button" name="{{ trip.add_to_favourite }}" class="btn btn-lg btn-favourite add-to-favourites" data-bs-toggle="tooltip" data-bs-placement="top" title="Add to favourites">
+                <i class="fas fa-heart"></i>
+            </button>
+            <a href="#" class="btn btn-lg btn-next btn-book">Book Now</a>
             <img src="{{ trip.images.url }}" class="card-img-top" alt="{{ trip.name }}">
         </div>
     </div>
-    <div class="row">
+    <div class="row spacing">
         <div class="col-lg-6 col-md-6 col-sm-12">
             <ul class="list-group">
-                <li class="list-group-item"><i class="fas fa-hourglass-end"></i>{{ trip.duration }}hrs</li>
-                <li class="list-group-item"><i class="fas fa-euro-sign"></i>{{ trip.adult_price }}</li>
-                <li class="list-group-item"><i class="fas fa-star"></i> 5/5 </li>
+                <li class="list-group-item"><i class="fas fa-hourglass-end fa-lg"></i><strong> Duration: </strong> {{ trip.duration }}hrs</li>
+                <li class="list-group-item"><i class="far fa-clock fa-lg"></i> <strong>Start Time: </strong> {{ trip.start_time }}</li>
+                <li class="list-group-item"><i class="fas fa-map-marked-alt fa-lg"></i> <strong> Departure Location: </strong> {{ trip.departure_location }}</li>
+                <li class="list-group-item"><i class="fas fa-euro-sign fa-lg"></i> {{ trip.adult_price }} <strong>per adult</strong></li>
+                {% if trip.child_price > 0 %}
+                <li class="list-group-item"><i class="fas fa-euro-sign fa-lg"></i> {{ trip.child_price }} <strong>per child  above 4yrs</strong></li>
+                {% endif %}
+                <li class="list-group-item"><i class="fas fa-star fa-lg"></i> 5/5 </li>
                 {% if trip.family_friendly %}
-                <li class="list-group-item"><i class="fas fa-child"></i>Family</li>
+                <li class="list-group-item"><i class="fas fa-child fa-lg"></i> <strong>Friendly Friendly</strong></li>
                 {% endif %}
             </ul>
         </div>
@@ -34,25 +43,25 @@
             <img src="" alt="">
         </div>
     </div>
-    <div class="row">
+    <div class="row spacing">
         <div class="col">
             <h2>Full Description</h2>
             <p>{{ trip.full_description }}</p>
         </div>
     </div>
-    <div class="row">
+    <div class="row spacing">
         <div class="col">
             <h3>What is Included</h3>
             <p>{{ trip.included }}</p>
         </div>
     </div>
-    <div class="row">
+    <div class="row spacing">
         <div class="col">
             <h3>What to Bring</h3>
             <p>{{ trip.what_to_bring }}</p>
         </div>
     </div>
-    <div class="row">
+    <div class="row spacing">
         <div class="col">
             <h4>Cancellation Policy</h4>
             <p>You may cancel your trip 24hrs in advance to get a full refund. 
@@ -62,7 +71,7 @@
     </div>
     <!--Load Reviews Here and Star Rating-->
     <!--Display Reveis only 3 on the page sorted by review date-->
-    <div class="row">
+    <div class="row spacing">
         <div class="col">
             <h4>Reviews</h4>   
         </div>
@@ -70,8 +79,8 @@
     <div class="row">
         <div class="col-6">
             <div class="col btn-div">
-                <a href="#" class="btn btn-lg btn-next">Explore Latest Deals</a>
                 <a href="{% url 'trips' %}" class="btn btn-lg btn-next">Go Back to All Trips</a>
+                <a href="#" class="btn btn-lg btn-next">Explore Latest Deals</a>
             </div>
         </div>
     </div>
