Added search functionality by trip name and description

--- a/trips/templates/trips/trips.html
+++ b/trips/templates/trips/trips.html
@@ -15,7 +15,7 @@
         <!--Search Form-->
         <div class="row">
             <div class="col-lg-8 offset-lg-2 col-md-8 offset-md-2 col-sm-12">
-                <form method="GET" action="#">
+                <form method="GET" action="{% url 'search' %}">
                     <div class="input-group w-100">
                         <input class="form-control border border-black rounded-0" type="text" name="q"
                             placeholder="Search our site">
