Added a view to display ticket availability by id in the form and added style

--- a/bookings/templates/bookings/view_availability.html
+++ b/bookings/templates/bookings/view_availability.html
@@ -16,55 +16,48 @@
 {% block content %}
 <section class="main-content">
 <div class="container">
-    <div class="row">
-        <div class="col">
-            <form action="">
-            {{ form.as_p }}
-            {% csrf_token %}
-            <!--form-->
-            <p>Date: <input type="text" id="datepicker"></p>
-            <input type="Submit" value="Add booking">
-             </form>
-            </div>
-    </div>
     <!--booking form-->
     <div class="row">
       <div class="col-lg-8 offset-lg-2 col-md-8 offeset-md-2 col-sm-12">
-        <form action="" method="POST">
+        <form action="" method="POST" class="booking-form">
+          {% csrf_token %}
           <div class="row">
             <div class="col">
-              <label for="trip-name">Trip Name</label>
-              <input type="text" class="form-control" name="trip-name" placeholder="Trip Name" aria-label="Trip Name">
+              <label for="trip-name">{{ trip_name }}</label>
+              <input type="text" class="form-control disabled" name="trip-name" placeholder="{{ trip.name }}" aria-label="Trip Name">
             </div>
           </div>
           <div class="row">
             <div class="col-lg-4">
-              <label for="total_adults">Number of Adults:</label>
-              <input type="number" id="total_adults" name="total_adults" min="1" max="9">
+              <label for="total_adults">Select Number of Adults:</label>
+              <input type="number" id="total_adults" class="from-control" name="total_adults" min="1" max="9">
+              <p> @ {{ trip.adult_price }}</p>
             </div>
+            {% if trip.family_friendly %}
             <div class="col-lg-4">
-              <label for="num_of_children">Number of Children:</label>
-              <input type="number" id="num_of_children" name="num_of_children" min="1" max="9">
+              <label for="num_of_children">Select Number of Children:</label>
+              <input type="number" id="num_of_children" class="from-control" name="num_of_children" min="1" max="9">
+              <p> @ {{ trip.child_price }}</p>
             </div>
+            {% endif %}
             <div class="col-lg-4">
-              <p>Date: <input type="text" id="datepicker"></p>
+              <p>Date: <input type="text" class="form-control" id="datepicker"></p>
             </div>
           </div>
           <div class="row">
             <div class="col">
-              <label for="total_num_tickets">Number of Tickets</label>
-              <input type="number" id="total_num_tickets" name="total_num_tickets" min="1" max="9">
+              <p>Number of Tickets: </p>
             </div>
           </div>
           <div class="row">
             <div class="col">
-              <label for="total_num_tickets">Total Price</label>
-              <input type="number" id="total_num_tickets" name="total_num_tickets" min="1" max="9">
+              <p>Total Price</p>
             </div>
           </div>
           <div class="row">
-            <div class="col">
-              <button type="submit">Add to Suitcase</button>
+            <div class="col btn-div">
+              <a href="{{ trip.get_url }}" class="btn btn-lg add-booking-btn">Go Back</a>
+              <button type="submit" class="btn btn-lg add-booking-btn">Add to Suitcase</button>
             </div>
           </div>
         </form>
@@ -77,7 +70,7 @@
 
 
 {% block postloadjs %}
-    {{ block.super %}
+    {{ block.super }}
     <script>
         // Code taken from https://api.jqueryui.com/datepicker/
         $( function() {
