Added basic table to display in the bag and links to bag.html

--- a/templates/includes/mobile-nav.html
+++ b/templates/includes/mobile-nav.html
@@ -27,7 +27,7 @@
     <!--access to the shopping bag-->
     <li class="list-inline-item nav-item">
         <a class="text-primary text-white font-weight-bold nav-link d-block d-lg-none"
-            href="">
+            href="{% url 'bag' %}">
             <div class="text-center">
                 <div><i class="fas fa-suitcase-rolling fa-lg"></i></i></div>
                 <p class="my-0">
