--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,7 @@
                       <!--Shopping bag link-->
                       <li class="list-inline-item nav-item">
                           <a class="nav-link text-white"
-                              href="">
+                              href="{% url 'bag' %}">
                               <div class="text-center">
                                   <div><i class="fas fa-suitcase-rolling fa-lg"></i></div>
                                   <p class="my-0">
