Updated bag context processor to calulate the totals

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -76,7 +76,7 @@
                                  <tr>
                                      <!--Product image-->
                                      <td class="p-3 w-25">
-                                        
+                                        {{ bag_items }}
                                      </td>
                                     
                                      <td class="py-3">
