--- a/bookings/templates/bookings/view_availability.html
+++ b/bookings/templates/bookings/view_availability.html
@@ -36,7 +36,7 @@
             {% if trip.family_friendly %}
             <div class="col-lg-4">
               <label for="num_of_children">Select Number of Children:</label>
-              <input type="number" id="num_of_children" class="from-control" name="num_of_children" min="1" max="9">
+              <input type="number" id="num_of_childen" class="from-control" name="num_of_childen" min="1" max="9">
               <p> @ {{ trip.child_price }}</p>
             </div>
             {% endif %}
